[project]
name = "fastapi-testcontainer-asyncpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.2",
    "sqlalchemy>=2.0.36",
    "testcontainers>=4.8.2",
]

[tool.pytest.ini_options]
pythonpath = '.'
asyncio_mode = 'auto'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
